Update WebrtcFrameScheduler to avoid concurrent captures.

Previously the scheduler would sometime schedule a new frame before the
previous frame is finished encoding. This was causing DCHECK in the
capturer and may lead to other unintended consequences.

BUG=657114

Review-Url: https://codereview.chromium.org/2431843002
Cr-Commit-Position: refs/heads/master@{#426102}

Former-commit-id: 0d63c67ff4554aaa7ba42a11ed33ef3880fe02d3